--- a/DisInterfacesWeb/MenuHamburgesa/style.css
+++ b/DisInterfacesWeb/MenuHamburgesa/style.css
@@ -1,64 +1,55 @@
-*{
+/* Estilos generales */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
+/* Estilos de los menus */
 .top {
     width: 100%;
     height: 50px;
     background-color: #7492B9;
-    color: white;
-}
-
-.top ul {
-    list-style: none;
-    max-width: 1090px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: end;
-    margin-right: 50px;
-    margin-top: 10px;
-    float: right;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 50px;
 }
 
-.top>ul>li {
-    line-height: 40px;
+#menu-toggle {
+    display: none;
 }
 
-.top>ul>li:hover{
+.top img {
     cursor: pointer;
 }
 
-
-.menu-lateral{
+/* Menú lateral que se escondera*/
+.menu-lateral {
     width: 20%;
     height: 90vh;
     background-color: darkblue;
     color: white;
     font-size: 18px;
-    right: 0px; /* -305 para que este escondido */
     position: fixed;
-    overflow-x: none;
-    transition: all 0.8s;
+    right: 0%;
+    top: 50px;
+    transition: right 0.8s;
 }
 
-.menu-lateral ul{
+.menu-lateral ul {
     list-style: none;
     text-align: center;
+    margin-top: 50px;
 }
 
-.menu-lateral ul li{
-   margin-bottom: 115px;
-   margin-top: 115px;
+.menu-lateral ul li {
+    margin: 115px 0;
 }
-
-.menu-lateral ul li:hover{
-    cursor: pointer;
+/* Se aplica si son hermanos */
+#menu-toggle:checked ~ .menu-lateral {
+    right: -20%; /* Desaparece el menu*/
 }
-
-
-
